force-app/main/default/objects/Product_Bundle_Import__c/Product_Bundle_Import__c.object-meta.xml
<CustomObject>
    <description>Used to import product bundles</description>
    <label>Product Bundle Import</label>
    <nameField>
        <displayFormat>PBI-{000000}</displayFormat>
        <label>Product Bundle Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Bundle Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>