force-app/main/default/objects/Product_Bundle_Import__c/fields/Bundle_Category__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Category__c</fullName>
    <label>Bundle Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Default Pricing</fullName>
            </value>
            <value>
                <fullName>Conversion Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>