force-app/main/default/objects/Product_Bundle_Import__c/fields/Bundle_Description__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Description__c</fullName>
    <description>Description of the top-level bundle</description>
    <label>Bundle Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>