force-app/main/default/objects/Product_Bundle_Import__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>Unique name for the top-level bundle</description>
    <label>Bundle Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>