force-app/main/default/objects/Product_Bundle_Import__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Extended message field to give details of failure</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>