force-app/main/default/objects/Product_Bundle_Import__c/fields/Product_Bundle_Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle_Rate_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resulting Product Bundle Rate Plan record</description>
    <label>Product Bundle Rate Plan</label>
    <referenceTo>Product_Bundle_Rate_Plan__c</referenceTo>
    <relationshipLabel>Product Bundle Imports</relationshipLabel>
    <relationshipName>Product_Bundle_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>