force-app/main/default/objects/Product_Bundle_Import__c/fields/Product_Rate_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Rate_Plan_Name__c</fullName>
    <description>The name of the product rate plan</description>
    <label>Product Rate Plan Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>