force-app/main/default/objects/Product_Bundle_Import__c/fields/Product_Rate_Plan_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Rate_Plan_Tier_Level__c</fullName>
    <label>Product Rate Plan Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>